--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -168,6 +168,7 @@ Participants were also successful when the failed reach was executed by a human 
 This may be because of the problem of opaque means.
 One theoretically possible explanation of these findings is that the participants could identify to which end a failed reach might be a means, but not to which end a communicative gesture might be a means.%
 \footnote{
+  \label{fn:communicative_intention}
 Hare and Tomasello 
 consider several explanations for their findings including `the hypothesis that chimpanzees do not understand the communicative intent of a cooperative-communicative experimenter' (\citeyear[p.\ 580]{hare_chimpanzees_2004}).
 \citet[pp.\ 5--7]{Moll:2007gu} argue for a hypothesis along these lines by appeal to a range of related findings.
@@ -199,7 +200,7 @@ This is one way in which moving away from a purely observational model of interp
 
 
 \section{Joint action}
-\label{joint_action}
+\label{sec:joint_action}
 Our overall aim is to defend this claim:
 there are routes to knowledge of the goals of others' actions
 which are closed to
@@ -220,7 +221,7 @@ If people want to disagree, this is only terminological.
 If an interpreter is able to interact with her targets,
 if she is not limited to merely observing them,
 how might this provide her with a route to knowledge of the goals of their actions?
-The intuitive idea we started with hinges on joint action, a particular form of interaction in which the actions of two or more agents are directed to a single goal (see section \vref{joint_action}).
+The intuitive idea we started with hinges on joint action, a particular form of interaction in which the actions of two or more agents are directed to a single goal (see section \vref{sec:joint_action}).
 Our intuitive idea was this:
 if an interpreter is engaged in joint action with her target, 
 it's easy for the interpreter to know what the goal of her target's actions is because this goal is the goal of her own actions.
@@ -410,17 +411,93 @@ we suggested that it could sometimes affect
 communicative actions.
 To illustrate this suggestion we drew on 
 an experiment by \citet{hare_chimpanzees_2004}
-in which participants had to find a reward 
-and were helped either by a failed reach or by a helpful point to the target location.
-Strikingly, for chimpanzees the helpful point is no help at all---even though it superficially resembles the failed reach, which occurred first and did help.
+in which the chimpanzee participants had to find a reward 
+and were helped by being shown either a failed reach or  a helpful point to the target location.
+Strikingly, for chimpanzees the helpful point is no help at all---even though it superficially resembles the failed reach, which  did help.
 Taking this paradigm as our case study, 
 we want to suggest that your-goal-is-my-goal might 
 enable us to understand how abilities to engage in joint action 
-could be part of what enables mindreaders to make the transation from 
+could be part of what enables mindreaders to make the transition from 
 a simple understanding of goals 
 to 
-understanding of communicative intent.
+an early understanding communicative actions.
 
+Let us put ourselves in the chimpanzee's position for a moment.
+We witness the pointing action.
+With our eyes we follow the point to a container \citep[see][p.\ 6]{Moll:2007gu}.
+But in selecting a container we are no more likely to choose this one than the other.
+So we associate the pointing action with its target, but we fail to ascribe any goal which would clue us in to the relevance of this target for our own actions.
+Now suppose 
+that 
+before pointing the agent had used engaging facial gestures to signal willingness to engage in joint action with us,
+that
+we were able to think of retrieving the food as a possible distributive goal%
+\footnote{
+    On \emph{distributive goal} see section \vref{sec:joint_action}.
+  }
+of our actions,
+and 
+that we had exploited the my-goal-is-your-goal inference.
+Then we would believe,
+perhaps mistakenly,
+that a goal of the pointing action was to retrieve the food.
+In which case the pointing action would have been no less helpful in enabling us to succeed than the failed reach (which, as you may recall, was very helpful).
+
+It is natural to suppose that the difficulty chimpanzees have in Hare and Tomasello's experiments with responding appropriately to helpful pointing but not to failed reaching
+is due to a failure to understand communicative intention.%
+\footnote{
+See also footnote \vref{fn:communicative_intention}.
+Relatedly,
+in their discussion of these findings
+Moll and Tomasello suggest that
+`to understand pointing, the subject needs to understand more than the individual goal-directed behaviour. 
+She needs to understand that by pointing towards a location, the other attempts to communicate to her where a desired object is located; that the other tries to inform her about something that is relevant for her'
+\citep[p.\ 6]{Moll:2007gu}.
+}
+What we are suggesting is not that this must be wrong, 
+but only that participants must also have been unable to 
+exploit the your-goal-is-my-goal inference.
+
+Consider a related experiment by \citet{leekam_adults_2010}.
+Again the participants, 
+who were two- and three-year-old children,
+had to retrieve a reward from one of several closed containers.
+This time they were shown an adult holding up a replica of the target container.
+Leekam and colleagues found that 
+when this action was accompanied by an engaging facial expression
+three-year-old children were significantly better at identifying the correct container compared to
+when the the action was accompanied by a neutral facial expression (p.\ 116).
+Why did the engaging facial expression enhance performance?
+The authors consider the idea that 
+`the adult’s social cues conveyed her communicative intent, which in turn encouraged the child to ‘see through the sign’ ... helping them to take a dual stance to it' 
+\citep[p.\ 118]{leekam_adults_2010}.
+But an alternative possibility is that children succeeded without understand the replica as a sign at all.
+Instead they may 
+have associated the replica with the container it resembled
+(which by itself was not enough to motivate them to select this container, of course)
+and 
+have exploiting my-goal-is-your-goal to infer that a goal of the action of holding up the replica was to find the reward.
+In this way they might have misunderstood the action 
+as like the failed pointing
+in being a failed attempt to retrieve the reward.
+
+*Point is not to defend conjecture about actual performance but to ...
+
+*productive misunderstandings can result in understanding communicative gesture.s
+
+***
+
+Note that I am not suggesting that young children might fail to understand communicative intent.
+I am suggesting that they might first understand the goals of pointing actions without understanding communicative intent.
+But of course once they understand the goals of pointing actions within the context of joint action, it's likely that they will be able to understand the goals of pointing actions outside the context of joint action too.\footnote{
+Contrast Csibra's `two stances' idea. The referential action understanding involves a “stance” (p. 455); teleological and referential action interpretation “rely on different kinds of action understanding' \citep[p.\ 456]{Csibra:2003kp}; they are initially two distinct `action interpretation systems' (although of course they come together later in development)  \citep[p.\ 456]{Csibra:2003kp}.
+In relation to Csibra's, my suggestion is not that there is no referential stance.
+It's rather that the referential stance might emerge from what he calls the `teleological stance' together with abilities to engage in the sort of joint actions that are characterised by shared goals.
+}
+
+Joint action may explain how individuals starting with a simple understanding of goals end up understanding communicative intentions.
+
+This is one illustration of how capacities for joint action, even very simple forms of joint action, might be relevant to explaining the development or evolution of richer forms of cultural cognition.
 
 
 \section{The problem of false belief}
