communication bit first attempt done

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -390,7 +390,7 @@ thereby rely on their targets' having correctly identified the goals of their ac
 Of course this is sometimes a reason not to rely on your-goal-is-my-goal.
 But where the target has better understanding of relevant means-ends relations,
 such as actions involving novel tools,
-the your-goal-is-my-goal route to knowledge of other's goals is sometimes the only option.
+the your-goal-is-my-goal route to knowledge of other's goals may sometimes be the only option.
 
 The distant promise of all this is that 
 understanding how interaction widens the evidential basis for mindreading
@@ -407,97 +407,156 @@ must already be  present.
 \section{Communicative gestures}
 When introducing the problem of opaque means 
 (in section \vref{sec:opaque_means})
-we suggested that it could sometimes affect
+we saw that it could  affect
 communicative actions.
 To illustrate this suggestion we drew on 
 an experiment by \citet{hare_chimpanzees_2004}
-in which the chimpanzee participants had to find a reward 
+in which chimpanzees had to find a reward 
 and were helped by being shown either a failed reach or  a helpful point to the target location.
 Strikingly, for chimpanzees the helpful point is no help at all---even though it superficially resembles the failed reach, which  did help.
-Taking this paradigm as our case study, 
+Taking this paradigm as a case study, 
 we want to suggest that your-goal-is-my-goal might 
 enable us to understand how abilities to engage in joint action 
 could be part of what enables mindreaders to make the transition from 
 a simple understanding of goals 
 to 
-an early understanding communicative actions.
+an early understanding communicative actions.%
+\footnote{
+Please note that, although our discussion borrows an experimental paradigm
+our aim is not to argue for empirical hypotheses about chimpanzee social cognition.
+Our aim is only to argue for the theoretical significance of interaction for mindreading by showing 
+that your-goal-is-my-goal
+could \emph{in principle} enable
+individuals to make the transition 
+from
+ a simple understanding of goals
+to
+ an early understanding of communicative actions.
+Of course it would strengthen our argument if we could provide evidence to show that this actually happens.
+But for now we are concerned with more narrowly conceptual issues.
+}
 
-Let us put ourselves in the chimpanzee's position for a moment.
+Let us imagine ourselves as the chimpanzee  for a moment.
 We witness the pointing action.
 With our eyes we follow the point to a container \citep[see][p.\ 6]{Moll:2007gu}.
-But in selecting a container we are no more likely to choose this one than the other.
-So we associate the pointing action with its target, but we fail to ascribe any goal which would clue us in to the relevance of this target for our own actions.
+So we do associate the pointing action with its target.
+But we are no more likely to choose this container than the other in seeking the reward.
+So we probably do not think of the pointing action as having any goal which would clue us in to the relevance of the container it indicates.
+(In principle we might perfectly understand the pointing action while failing to react to it in any systematic way because we are uncertain about the agent's integrity; but let us discount this possibility for the sake of illustration.)
 Now suppose 
-that 
-before pointing the agent had used engaging facial gestures to signal willingness to engage in joint action with us,
+that, 
+before pointing, the agent had used engaging facial gestures to signal willingness to engage in joint action with us; and
 that
 we were able to think of retrieving the food as a possible distributive goal%
 \footnote{
     On \emph{distributive goal} see section \vref{sec:joint_action}.
   }
-of our actions,
+of our actions;
 and 
 that we had exploited the my-goal-is-your-goal inference.
 Then we would believe,
 perhaps mistakenly,
 that a goal of the pointing action was to retrieve the food.
-In which case the pointing action would have been no less helpful in enabling us to succeed than the failed reach (which, as you may recall, was very helpful).
+In which case the pointing action would have been no less helpful in enabling us to succeed than the failed reach---which, as you may recall, was very helpful.
+So the your-goal-is-my-goal inference can 
+enable interpreters
+to  
+misunderstand pointing actions as something like  failed reaches rather than as communicative gestures.
+This means that,
+even without any understanding of communication,
+they can respond appropriately to helpful pointing actions in the context of joint action.
+
 
 It is natural to suppose that the difficulty chimpanzees have in Hare and Tomasello's experiments with responding appropriately to helpful pointing but not to failed reaching
 is due to a failure to understand communicative intention.%
 \footnote{
-See also footnote \vref{fn:communicative_intention}.
+See  footnote \vref{fn:communicative_intention}.
 Relatedly,
 in their discussion of these findings
 Moll and Tomasello suggest that
 `to understand pointing, the subject needs to understand more than the individual goal-directed behaviour. 
 She needs to understand that by pointing towards a location, the other attempts to communicate to her where a desired object is located; that the other tries to inform her about something that is relevant for her'
 \citep[p.\ 6]{Moll:2007gu}.
+Assuming this is right, our suggestion is that individuals could reliably  respond  appropriately to pointing actions in the context of joint action without understanding pointing.
 }
-What we are suggesting is not that this must be wrong, 
-but only that participants must also have been unable to 
+What we are suggesting is that participants must also have been unable or unwilling to 
 exploit the your-goal-is-my-goal inference.
 
 Consider a related experiment by \citet{leekam_adults_2010}.
-Again the participants, 
-who were two- and three-year-old children,
-had to retrieve a reward from one of several closed containers.
-This time they were shown an adult holding up a replica of the target container.
+Again participants had to retrieve a reward from one of several closed containers, but this time they were two- and three-year-old children.
+In one condition participants were shown an adult holding up a replica of the target container.
 Leekam and colleagues found that 
-when this action was accompanied by an engaging facial expression
+when this action was accompanied by an engaging facial expression,
 three-year-old children were significantly better at identifying the correct container compared to
 when the the action was accompanied by a neutral facial expression (p.\ 116).
 Why did the engaging facial expression enhance performance?
 The authors consider the idea that 
-`the adult’s social cues conveyed her communicative intent, which in turn encouraged the child to ‘see through the sign’ ... helping them to take a dual stance to it' 
-\citep[p.\ 118]{leekam_adults_2010}.
-But an alternative possibility is that children succeeded without understand the replica as a sign at all.
-Instead they may 
-have associated the replica with the container it resembled
-(which by itself was not enough to motivate them to select this container, of course)
-and 
-have exploiting my-goal-is-your-goal to infer that a goal of the action of holding up the replica was to find the reward.
-In this way they might have misunderstood the action 
-as like the failed pointing
-in being a failed attempt to retrieve the reward.
-
-*Point is not to defend conjecture about actual performance but to ...
-
-*productive misunderstandings can result in understanding communicative gesture.s
-
-***
-
-Note that I am not suggesting that young children might fail to understand communicative intent.
-I am suggesting that they might first understand the goals of pointing actions without understanding communicative intent.
-But of course once they understand the goals of pointing actions within the context of joint action, it's likely that they will be able to understand the goals of pointing actions outside the context of joint action too.\footnote{
-Contrast Csibra's `two stances' idea. The referential action understanding involves a “stance” (p. 455); teleological and referential action interpretation “rely on different kinds of action understanding' \citep[p.\ 456]{Csibra:2003kp}; they are initially two distinct `action interpretation systems' (although of course they come together later in development)  \citep[p.\ 456]{Csibra:2003kp}.
-In relation to Csibra's, my suggestion is not that there is no referential stance.
-It's rather that the referential stance might emerge from what he calls the `teleological stance' together with abilities to engage in the sort of joint actions that are characterised by shared goals.
+engaging facial gestures somehow help children to understand communicative intentions.%
+\footnote{
+\citet[p.\ 118]{leekam_adults_2010}: `the adult’s social cues conveyed her communicative intent, which in turn encouraged the child to ‘see through the sign’ ... helping them  to take a dual stance to it.'
 }
+An alternative possibility is that children succeeded without understand the replica as a sign at all.
+Instead they may have 
+associated the replica with the container it resembled
+(which by itself is not enough to motivate selecting this container, of course),
+regarded the engaging facial gestures as expressing willingness to engage in joint action,
+and 
+exploited your-goal-is-my-goal 
+	to infer that a goal of the action of holding up the replica was to find the reward.
+In this way they might have understood (or misunderstood) the action of holding up the replica as 
+like a failed reach
+in being an attempt to retrieve the reward.
 
-Joint action may explain how individuals starting with a simple understanding of goals end up understanding communicative intentions.
+So far we have illustrated how your-goal-is-my-goal enables responding appropriately to communicative gestures with two examples, pointing and holding up a replica.
+The pattern of reasoning generalises to a wider range of communicative gestures including single-word utterances.
+The basic requirement is this: in a particular context, the interpreter must associate a communicative gesture with its referent.
+For instance, she must associate the pointing gesture with the object indicated; or, if (say) she is looking for an object she must associate an utterance of `cupboard' with the nearby cupboard.
+As we saw, 
+outside the context of joint action,
+merely associating a gesture with its referent falls short of being able to respond appropriately.
+After all, the goals of the gesture may well be unrelated to the goals of the interpreter's actions.
+But if an interpreter supposes that her target is willing to engage in joint action with her,
+then she may infer that the goal of her target's action is her goal
+and so be motivated to treat the thing associated with a communicative gestures as relevant to the goal of her own actions.
+This will reliably (but not always) enable her to respond appropriately to the communicative gesture even without understanding it as a communicative gesture.
+And once she has experienced how that communicative gesture works as a tool for guiding others' actions in the context of joint action,
+she may be in a position to realise, further, that the same tool can be used in other contexts.
 
-This is one illustration of how capacities for joint action, even very simple forms of joint action, might be relevant to explaining the development or evolution of richer forms of cultural cognition.
+This, in barest outline, is 
+how
+abilities to engage in joint action
+mean that 
+a mindreader with an ability to ascribe simple goals only (and no understanding of communicative intent)
+might 
+nevertheless reliably respond appropriately to some communicative gestures,
+and so be in a position to understand how such gestures can be used to guide others' actions.%
+\footnote{
+Contrast Csibra's claim that,
+early in human development,
+goal ascription (`teleological understanding' in his terms)
+and 
+identifying the referents of communicative gestures (`referential understanding')
+`rely on different kinds of action understanding' %\citep[p.\ 456]{Csibra:2003kp}
+and
+are initially two distinct `action interpretation systems'   \citep[p.\ 456]{Csibra:2003kp}.
+%(although of course they come together later in development)
+We have not shown that this hypothesis wrong.
+But we have shown that there is another possibility:
+the referential stance may 
+emerge from
+the teleological stance
+ together with abilities to engage in simple forms of joint action.
+}
+Of course we have only argued that this transition is theoretically possible;
+we have not attempted to defend any hypothesis about evolution or development.
+Our point is just to illustrate one of several ways in which
+interaction may matter for mindreading.
+Widening the evidential basis for goal ascription
+to include evidence available only to interpreters capable of joint action with their targets
+makes possible 
+novel hypotheses about the emergence, in evolution or development (and perhaps even both), of communicative gestures.
+
+%This is one illustration of how capacities for joint action, even very simple forms of joint action, might be relevant to explaining the development or evolution of richer forms of cultural cognition.
 
 
 \section{The problem of false belief}
