small changes only

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -24,7 +24,28 @@
 %\tableofcontents
 
 \begin{abstract}
-***
+%Goal ascription is fundamental for mindreading.
+What evidence grounds ascriptions of thoughts and actions,
+and how does the evidence support the ascriptions?
+In answering this question, 
+philosophers sometimes ignore interaction and focus on mere observation.
+The only evidence considered is 
+evidence that would be available to mindreaders who observe their targets but are not necessarily in a position to interact with them.
+The present paper identifies evidence 
+that is available only to mindreaders capable of interacting with their targets.
+Being poised to interact with others may enable one to know things about their minds which one might not otherwise be in a position to know.
+
+%What evidence grounds ascriptions of goals to other agents' actions,
+%and how does the evidence support the ascriptions?
+%It is usually assumed that, in answering this question, 
+%we can focus on observation and ignore interaction.
+%We can restrict ourselves to evidence that would be available to mindreaders who observe their targets but are not necessarily in a position to interact with them.
+%The present paper identifies evidence 
+%which supports goal ascriptions
+%and 
+%is available only to mindreaders who are capable of interacting with their targets.
+
+
 \end{abstract}
 
 
@@ -37,6 +58,7 @@ Mostly people have supposed that the evidence is available to pure observers ---
 In challenging this thesis we want to start with goal ascription, which is either a precursor to or a component of mindreading.
 Recent interest in non-propositional precursors to mindreading makes this appropriate.
 
+***Goal ascription essential for verifying predictions of action.
 
 \section{Goal ascription}
 Purposive action is action directed to the realisation of one or more outcomes.
@@ -324,13 +346,26 @@ it may be sufficient to believe the conclusion because one has reliably detected
 it may not be necessary to think of this situation as a situation where the premises are true,
 nor even to be able to think of it in this way.
 
+In principle,
+exploiting your-goal-is-my-goal does not require that the interpreter actually be in a position to interact with her target.
+It is sufficient (and would be necessary but for some special cases) that the target takes the interpreter to be in a position to interact with him. 
+Our concern, however,
+is with cases that are likely to be important for understanding
+development or evolution (and ideally both).
+This mandates a focus on interpreters of limited sophistication
+who lack both deep insight into others' minds and fully-fledged communicative abilities.
+Such interpreters are unlikely to be able to contrive or exploit situations in which they only appear to be in a position to interact with their targets.
+So the explanatorily relevant cases are those 
+in which an interpreter is manifestly in a position to interact with her target.
+
+
 Our aim in identifying the your-goal-is-my-goal is not to 
 defend a detailed hypothesis about the mechanisms and processes involved in mindreading.
 Instead our present concerns are limited to a normative question about the evidential basis of mindreading.
 The your-goal-is-my-goal inference matters
 not because it describes how interpreters actually assign goals
 but because 
-its existence reveals that interacting mindreaders can have access to evidence unavailable to those relying entirely on observation.
+its existence reveals that interacting mindreaders can have evidence that would be unavailable to them if they were relying   entirely on observation.%
  
 
 \section{Avoiding the problem of opaque means}
